--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <input type="text" name="nome" placeholder="Nome" class="input-item">
                     <input type="text" name="whatsappemail" placeholder="Email ou WhatsApp" class="input-item">
                     <input type="text" name="assunto" placeholder="Assunto" class="input-item">
-                    <button class="form-btn" form="formcontact" type="submit" value="submit" text-sec5>Enviar</button>
+                    <button class="form-btn" form="formcontact" type="submit" value="submit">Enviar</button>
                 </form>
             </div>
             <div class="box-content-sec5">
