--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
     <title>Brusun | Energia Solar </title>
 </head>
 <body>
-    <div class="nav-box">
+    <div class="nav-box"><!--INICIO NAV -->
+        <a href="#sec1"><img src="assets/imgs/logo.png" alt="" class="logo-nav"></a>
         <nav>
-            <div class="left-nav">
-                <a href="#sec1"><img src="assets/imgs/logo.png" alt="" class="logo-nav"></a>
-            </div>
-            <div class="right-nav">
-                <ul class="right-nav-box">
-                    <li class="right-nav-item"><a href="#sec2">Quem Somos</a></li>
-                    <li class="right-nav-item"><a href="#sec3">Diferenciais</a></li>
-                    <li class="right-nav-item"><a href="#sec4">Clientes</a></li>
-                    <li class="right-nav-item"><a href="#sec5">Contato</a></li>
-                </ul>
-            </div>
+            <ul class="nav-box-itens">
+                <li class="right-nav-item"><a href="#sec2">Quem Somos</a></li>
+                <li class="right-nav-item"><a href="#sec3">Vantagens</a></li>
+                <li class="right-nav-item"><a href="#sec3">Produtos</a></li>
+                <li class="right-nav-item"><a href="#sec4">Clientes</a></li>
+                <li class="right-nav-item"><a href="#sec5">Contato</a></li>
+            </ul>
         </nav>
-    </div>
-    <section id="sec1">
+    </div><!--FIM NAV -->
+    <section id="sec1"><!--INICIO SEC 1-->
         <div class="content-box-sec1">
             <div class="logo-content-box">
                 <img src="assets/imgs/logo2.png" alt="">
@@ -46,10 +43,10 @@
                 </div>
             </div>  
         </div>
-    </section>
-    <section id="sec2">
+    </section><!--FIM SEC 1-->
+    <section id="sec2"><!--INICIO SEC 2-->
         <h1>teste</h1>
-    </section>
+    </section><!--FIM SEC 2-->
     <section id="sec5"><!--INICIO SEC 5-->
         <div class="content-sec5">
             <div class="box-content-sec5">
