--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="nav-box"><!--INICIO NAV -->
-        <a href="#sec1"><img src="assets/imgs/logo.png" alt="" class="logo-nav"></a>
+        <a href="#sec1"><img src="assets/imgs/LOGOH2.png" alt="" class="logo-nav"></a>
         <nav id="nav">
             <Button 
                 class="nav-btn" onclick="toggleMenu()">
@@ -27,7 +27,6 @@
         </nav>
     </div><!--FIM NAV -->
     <section id="sec1"><!--INICIO SEC 1-->
-       
     </section><!--FIM SEC 1-->
     <div class="whatsapp-butoon">
         <a href="https://api.whatsapp.com/send?phone=5528999519306" target="_blank"><img src="assets/icons/whats-icon.png" alt=""></a>
