--- a/index.html
+++ b/index.html
@@ -26,7 +26,40 @@
             </ul>
         </nav>
     </div><!--FIM NAV -->
-    <section id="sec1"><!--INICIO SEC 1-->
+    <section id="sec1"class="slide" data-slide="slide" ><!--INICIO SEC 1-->
+        <div class="slide-itens">
+            <div class="img-box img-box-1">
+                <p class="text-slide1">
+                    <span class="slide1-text1">Energia limpa</span><br>
+                    <span class="slide1-text2">Ao Seu Alcance</span>
+                </p>
+            </div>
+            <div class="img-box img-box-2">
+                <p class="text-slide2">
+                    <span class="slide2-text1">Aproveite melhor o por do sol</span><br>
+                    <span class="slide2-text2">gere sua própria economia,</span><span class="slide2-text3">economize na sua conta de luz</span><br>
+                    <span class="slide2-text4">e Ajude o Planeta</span>
+                </p>
+            </div>
+            <div class="img-box img-box-3"> 
+                <p class="text-slide1">
+                    <span class="slide1-text1">Energia limpa</span><br>
+                    <span class="slide1-text2">Ao Seu Alcance</span>
+                </p>
+            </div>
+            <div class="img-box img-box-4">
+                <p class="text-slide2">
+                    <span class="slide2-text1">Aproveite melhor o por do sol</span><br>
+                    <span class="slide2-text2">gere sua própria economia,</span><span class="slide2-text3">economize na sua conta de luz</span><br>
+                    <span class="slide2-text4">e Ajude o Planeta</span>
+                </p>
+            </div>
+        </div>
+        <nav class="slide-nav">
+            <button class="slide-prev"><img src="./assets/imgs/arrow2.png"></button>
+            <button class="slide-next"><img src="./assets/imgs/arrow.png"></button>
+            <div class="slide-thumb"></div> 
+        </nav>
     </section><!--FIM SEC 1-->
     <div class="whatsapp-butoon">
         <a href="https://api.whatsapp.com/send?phone=5528999519306" target="_blank"><img src="assets/icons/whats-icon.png" alt=""></a>
