v zindex whats icon

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
                     <span class="slide2-text4">e Ajude o Planeta</span>
                 </p>
             </div>
+            <div class="img-box img-box-4">
+                <p class="text-slide2">
+                    <span class="slide2-text1">Aproveite melhor o por do sol</span><br>
+                    <span class="slide2-text2">gere sua própria economia,</span><span class="slide2-text3">economize na sua conta de luz</span><br>
+                    <span class="slide2-text4">e Ajude o Planeta</span>
+                </p>
+            </div>
         </div>
         <nav class="slide-nav">
             <button class="slide-prev"><img src="./assets/imgs/arrow2.png"></button>
@@ -61,6 +68,9 @@
             <div class="slide-thumb"></div> 
         </nav>
     </section><!--FIM SEC 1-->
+    <section id="sec2">
+
+    </section>
     <div class="whatsapp-butoon">
         <a href="https://api.whatsapp.com/send?phone=5528999519306" target="_blank"><img src="assets/icons/whats-icon.png" alt=""></a>
     </div>
