--- a/index.html
+++ b/index.html
@@ -29,36 +29,21 @@
     <section id="sec1"class="slide" data-slide="slide" ><!--INICIO SEC 1-->
         <div class="slide-itens">
             <div class="img-box img-box-1">
-                <p class="text-slide1">
-                    <span class="slide1-text1">Energia limpa</span><br>
-                    <span class="slide1-text2">Ao Seu Alcance</span>
+                <p class="text-slide">
+                    <span class="slide1-text1">Concentre sua energia para</span><br>
+                    <span class="slide1-text2">Ajudar o Planeta</span>
                 </p>
             </div>
             <div class="img-box img-box-2">
-                <p class="text-slide2">
-                    <span class="slide2-text1">Aproveite melhor o por do sol</span><br>
-                    <span class="slide2-text2">gere sua própria economia,</span><span class="slide2-text3">economize na sua conta de luz</span><br>
-                    <span class="slide2-text4">e Ajude o Planeta</span>
+                <p class="text-slide">
+                    <span class="slide1-text1">Aproveite o Sol e Gere</span><br>
+                    <span class="slide1-text2">Sua Própria Energia</span>
                 </p>
             </div>
             <div class="img-box img-box-3"> 
-                <p class="text-slide1">
-                    <span class="slide1-text1">Energia limpa</span><br>
-                    <span class="slide1-text2">Ao Seu Alcance</span>
-                </p>
-            </div>
-            <div class="img-box img-box-4">
-                <p class="text-slide2">
-                    <span class="slide2-text1">Aproveite melhor o por do sol</span><br>
-                    <span class="slide2-text2">gere sua própria economia,</span><span class="slide2-text3">economize na sua conta de luz</span><br>
-                    <span class="slide2-text4">e Ajude o Planeta</span>
-                </p>
-            </div>
-            <div class="img-box img-box-4">
-                <p class="text-slide2">
-                    <span class="slide2-text1">Aproveite melhor o por do sol</span><br>
-                    <span class="slide2-text2">gere sua própria economia,</span><span class="slide2-text3">economize na sua conta de luz</span><br>
-                    <span class="slide2-text4">e Ajude o Planeta</span>
+                <p class="text-slide3">
+                    <span class="slide1-text2">Invista e Lucre</span><br>
+                    <span class="slide1-text1">Com Energia Solar</span>
                 </p>
             </div>
         </div>
