--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="img-box img-box-2">
                 <p class="text-slide">
-                    <span class="slide1-text1">Aproveite o Sol e Gere</span><br>
+                    <span class="slide1-text1">Aproveite o Sol e Produza</span><br>
                     <span class="slide1-text2">Sua Própria Energia</span>
                 </p>
             </div>
