--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="nav-box"><!--INICIO NAV -->
-        <a href="#sec1"><img src="assets/imgs/LOGOH2.png" alt="" class="logo-nav"></a>
+        <a href="#sec1"><img src="assets/imgs/logo-h.png" alt="" class="logo-nav"></a>
         <nav id="nav">
             <Button 
                 class="nav-btn" onclick="toggleMenu()">
@@ -20,7 +20,6 @@
             <ul class="nav-box-itens">
                 <li class="right-nav-item"><a href="#sec2" class="item-nav">Quem Somos</a></li>
                 <li class="right-nav-item"><a href="#sec3" class="item-nav">Vantagens</a></li>
-                <li class="right-nav-item"><a href="#sec3" class="item-nav">Produtos</a></li>
                 <li class="right-nav-item"><a href="#sec4" class="item-nav">Clientes</a></li>
                 <li class="right-nav-item"><a href="#sec5" class="item-nav">Contato</a></li>
             </ul>
@@ -34,16 +33,16 @@
                     <span class="slide1-text2">Ajudar o Planeta</span>
                 </p>
             </div>
-            <div class="img-box img-box-2">
-                <p class="text-slide">
-                    <span class="slide1-text1">Aproveite o Sol e Produza</span><br>
-                    <span class="slide1-text2">Sua Própria Energia</span>
-                </p>
-            </div>
             <div class="img-box img-box-3"> 
                 <p class="text-slide3">
                     <span class="slide1-text2">Invista e Lucre</span><br>
                     <span class="slide1-text1">Com Energia Solar</span>
+                </p>
+            </div>
+            <div class="img-box img-box-2">
+                <p class="text-slide">
+                    <span class="slide1-text1">Aproveite o Sol e Produza</span><br>
+                    <span class="slide1-text2">Sua Própria Energia</span>
                 </p>
             </div>
         </div>
@@ -54,6 +53,17 @@
         </nav>
     </section><!--FIM SEC 1-->
     <section id="sec2">
+        <div class="text-box-sec2">
+            <h2>Por que investir em energia solar?</h2>
+        </div>
+        <div class="card-box-sec2">
+            <img src="assets/imgs/BANNERS SITE.png" alt="">
+            <img src="assets/imgs/BANNERS SITE 2.png" alt="">
+            <img src="assets/imgs/BANNERS SITE 3.png" alt="">
+        </div>
+    </section>
+    <section id="sec3">
+       
     </section>
     <div class="whatsapp-butoon">
         <a href="https://api.whatsapp.com/send?phone=5528999519306" target="_blank"><img src="assets/icons/whats-icon.png" alt=""></a>
