--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <h2>Por que investir em energia solar?</h2>
         </div>
         <div class="card-box-sec2">
-            <img src="assets/imgs/BANNERS SITE.png" alt="">
-            <img src="assets/imgs/BANNERS SITE 2.png" alt="">
-            <img src="assets/imgs/BANNERS SITE 3.png" alt="">
+            <img src="assets/imgs/BANNERS SITE.png" alt="" class="init-hidden init-hidden-1">
+            <img src="assets/imgs/BANNERS SITE 2.png" alt="" class="init-hidden init-hidden-2">
+            <img src="assets/imgs/BANNERS SITE 3.png" alt=""  class="init-hidden init-hidden-3">
         </div>
     </section>
     <section id="sec3">
