--- a/index.html
+++ b/index.html
@@ -57,13 +57,28 @@
             <h2>Por que investir em energia solar?</h2>
         </div>
         <div class="card-box-sec2">
-            <img src="assets/imgs/BANNERS SITE.png" alt="" class="init-hidden init-hidden-1">
-            <img src="assets/imgs/BANNERS SITE 2.png" alt="" class="init-hidden init-hidden-2">
-            <img src="assets/imgs/BANNERS SITE 3.png" alt=""  class="init-hidden init-hidden-3">
+            <img src="assets/imgs/banner1.png" alt="" class="init-hidden init-hidden-1">
+            <img src="assets/imgs/banner2.png" alt="" class="init-hidden init-hidden-2">
+            <img src="assets/imgs/banner3.png" alt=""  class="init-hidden init-hidden-3">
         </div>
     </section>
     <section id="sec3">
-       
+        <div class="left-side-sec3">
+            <h3 class="init-hidden">25 Anos</h3>
+            <h4 class="init-hidden">Garantia de<br>
+            Efeciência</h4>
+        </div>
+        <div class="right-side-sec3">
+            <span class="class-span-right-1 init-hidden">Investi<br>mento</span>
+            <div class="right-side-sec3-box" >
+                <span class="class-span-right-2">
+                    <img src="./assets/imgs/icon-sun.png" class="init-hidden">
+                </span>
+                <p class="init-hidden">Gere sua energia sem se<br>
+                <span class="class-span-right-3">Preocupar por anos!</span></p>
+            </div>
+            <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
+        </div>
     </section>
     <div class="whatsapp-butoon">
         <a href="https://api.whatsapp.com/send?phone=5528999519306" target="_blank"><img src="assets/icons/whats-icon.png" alt=""></a>
