--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         </div>
         <div class="right-side-sec3">
             <span class="class-span-right-1 init-hidden">Investi<br>mento</span>
-            <div class="right-side-sec3-box" >
+            <div class="right-side-sec3-box init-hidden">
                 <span class="class-span-right-2">
-                    <img src="./assets/imgs/icon-sun.png" class="init-hidden">
+                    <img src="./assets/imgs/icon-sun.png">
                 </span>
-                <p class="init-hidden">Gere sua energia sem se<br>
+                <p>Gere sua energia sem se<br>
                 <span class="class-span-right-3">Preocupar por anos!</span></p>
             </div>
             <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
