--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="right-side-sec3">
             <span class="class-span-right-1 init-hidden">Investi<br>mento</span>
-            <div class="right-side-sec3-box init-hidden">
+            <div class="right-side-sec3-box">
                 <span class="class-span-right-2">
                     <img src="./assets/imgs/icon-sun.png">
                 </span>
