--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <span class="class-span-right-1 init-hidden">Investi<br>mento</span>
             <div class="right-side-sec3-box">
                 <span class="class-span-right-2">
-                    <img src="./assets/imgs/icon-sun.png">
+                    <img src="./assets/imgs/icon-sun.png" class="init-hidden">
                 </span>
-                <p>Gere sua energia sem se<br>
-                <span class="class-span-right-3">Preocupar por anos!</span></p>
+                <p class="init-hidden">Gere sua energia sem se<br>
+                <span class="class-span-right-3 init-hidden">Preocupar por anos!</span></p>
             </div>
             <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
         </div>
