--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="right-side-sec3">
             <span class="class-span-right-1 init-hidden">Investi<br>mento</span>
             <div class="right-side-sec3-box">
-                <span class="class-span-right-2">
+                <span class="class-span-right-2 init-hidden">
                     <img src="./assets/imgs/icon-sun.png">
                 </span>
-                <p>Gere sua energia sem se<br>
-                <span class="class-span-right-3">Preocupar por anos!</span></p>
+                <p class="init-hidden">Gere sua energia sem se<br>
+                <span class="class-span-right-3 init-hidden">Preocupar por anos!</span></p>
             </div>
             <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
         </div>
