--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <img src="./assets/imgs/icon-sun.png">
                 </span>
                 <p class="init-hidden">Gere sua energia sem se<br>
-                <span class="class-span-right-3 init-hidden">Preocupar por anos!</span></p>
+                <span class="class-span-right-3 init-hidden init-hidden-4">Preocupar por anos!</span></p>
             </div>
             <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
         </div>
