--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
         </div>
     </section>
+    <div class="instagram-button">
+        <a href="https://www.instagram.com/brusun.solar/" target="_blank"><span>Siga-nos no Instagram</span><img src="./assets/icons/instagram-logo.png"></a>
+    </div>
     <div class="whatsapp-butoon">
         <a href="https://api.whatsapp.com/send?phone=5528999519306" target="_blank"><img src="assets/icons/whats-icon.png" alt=""></a>
     </div>
