--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <span class="btn-nav-icon"></span></Button>
             </button>
             <ul class="nav-box-itens">
-                <li class="right-nav-item"><a href="#sec2" class="item-nav">Quem Somos</a></li>
-                <li class="right-nav-item"><a href="#sec3" class="item-nav">Vantagens</a></li>
+                <li class="right-nav-item"><a href="#" class="item-nav">Quem Somos</a></li>
+                <li class="right-nav-item"><a href="#sec2" class="item-nav">Vantagens</a></li>
                 <li class="right-nav-item"><a href="#sec4" class="item-nav">Clientes</a></li>
                 <li class="right-nav-item"><a href="#sec5" class="item-nav item-nav-destaque">Orçamento</a></li>
             </ul>
@@ -60,7 +60,7 @@
     </section><!--FIM SEC 1-->
     <section id="sec2">
         <div class="text-box-sec2">
-            <h2>Por que investir em energia solar?</h2>
+            <h2>Com a Brusun é só vantagens</h2>
         </div>
         <div class="card-box-sec2">
             <img src="assets/imgs/banner1.png" alt="" class="init-hidden init-hidden-1">
@@ -88,22 +88,32 @@
     </section>
     <section id="sec5"><!--INICIO SEC 5-->
         <div class="content-sec5">
-            <div class="box-content-sec5">
-                <h3 text-sec5>Obrigado por<br> chegar até aqui!</h3>
-                <p text-sec5>Preencha os dados Abaixo<br> e envie uma mensagem</p>
+            <div class="left-side-sec5">
+                <h3>Quanto <span>você gasta</span><br> de energia por mês?</h3>
+                <p class="normal-text-sec5">Arraste até chegar no valor da sua conta</p>
+                <div class="gasto-box-sec5">
+                    <input type="range" min="150" max="3000" step="30" class="input-range" value="100" id="input-range"><span class="gasto-sec5" id="gasto-sec5">R$ 150</span>
+                </div>
+                <div class="result-box-sec5">
+                    <p class="normal-text-sec5">você terá uma economia de:</p>
+                    <p class="text-economia" id="text-economia">R$ 142,00 <span>/ mês</span><p>
+                </div>
+                <p class="economia-text-sec5">Estimativa baseada em até 95% de economia.</p>
             </div>
-            <div class="box-content-sec5">
-                <form action="submit" method="post" class="form" id="formcontact">
-                    <input type="text" name="nome" placeholder="Nome" class="input-item">
-                    <input type="text" name="whatsappemail" placeholder="Email ou WhatsApp" class="input-item">
-                    <select name="assunto" id="assunto" placeholder="Assunto" class="input-item">
-                        <option value="Orçamento Casa">Orçamento para minha casa</option>
-                        <option value="Orçamento Empresa">Orçamento para minha empresa</option>
-                        <option value="Outro" onclick="inputOutro()">Outro</option>
-                </select>
-                <input type="text" name="outro" placeholder="Digite aqui" class="input-item inputOutro">
-                <button class="form-btn" form="formcontact" type="submit" value="submit" text-sec5>Enviar</button>
-                </form>
+            <div class="right-side-sec5">
+                <div class="box-content-sec5">
+                    <form action="submit" method="post" class="form" id="formcontact">
+                        <input type="text" name="nome" placeholder="Nome" class="input-item">
+                        <input type="text" name="whatsappemail" placeholder="Email ou WhatsApp" class="input-item">
+                        <select name="assunto" id="assunto" placeholder="Assunto" class="input-item">
+                            <option value="Orçamento Casa">Orçamento para minha casa</option>
+                            <option value="Orçamento Empresa">Orçamento para minha empresa</option>
+                            <option value="Outro" onclick="inputOutro()">Outro</option>
+                        </select>
+                        <input type="text" name="outro" placeholder="Digite aqui" class="input-item inputOutro">
+                        <button class="form-btn" form="formcontact" type="submit" value="submit" text-sec5>Enviar</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section><!--FIM SEC 5-->
