--- a/index.html
+++ b/index.html
@@ -63,9 +63,42 @@
             <h2>Com a Brusun é só vantagens</h2>
         </div>
         <div class="card-box-sec2">
-            <img src="assets/imgs/banner1.png" alt="" class="init-hidden init-hidden-1">
-            <img src="assets/imgs/banner2.png" alt="" class="init-hidden init-hidden-2">
-            <img src="assets/imgs/banner3.png" alt=""  class="init-hidden init-hidden-3">
+            <div class="card-item-sec2 init-hidden init-hidden-1">
+                <div class="card-item-box-img">
+                    <img src="assets/icons/econo-icon.png" alt="" class="">
+                </div>
+                <div class="card-item-box-text">
+                    <h5>+ Economia</h5>
+                    <p>na conta de energia</p>
+                </div>
+            </div>
+            <div class="card-item-sec2 init-hidden init-hidden-2">
+                <div class="card-item-box-img">
+                    <img src="assets/icons/sust-icon.png" alt="" class="">
+                </div>
+                <div class="card-item-box-text">
+                    <h5 class="text-diff-sec2">+ Energia Limpa</h5>
+                    <p>e sustentável para o nosso planeta</p>
+                </div>
+            </div>
+            <div class="card-item-sec2 init-hidden init-hidden-3">
+                <div class="card-item-box-img">
+                    <img src="assets/icons/confo-icon.png" alt="" class="">
+                </div>
+                <div class="card-item-box-text">
+                    <h5>+ Conforto</h5>
+                    <p>e liberdade de consumo</p>
+                </div>
+            </div>
+            <div class="card-item-sec2 init-hidden init-hidden-4">
+                <div class="card-item-box-img">
+                    <img src="assets/icons/casa-icon.png" alt="" class="">
+                </div>
+                <div class="card-item-box-text">
+                    <h5 class="text-diff-sec2">+ Valorização</h5>
+                    <p>para o seu imóvel</p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="sec3">
