--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <img src="assets/icons/sust-icon.png" alt="" class="">
                 </div>
                 <div class="card-item-box-text">
-                    <h5 class="text-diff-sec2">+ Energia Limpa</h5>
-                    <p>e sustentável para o nosso planeta</p>
+                    <h5 class="text-diff-sec2">+ Energia</h5>
+                    <p>Limpa e sustentável</p>
                 </div>
             </div>
             <div class="card-item-sec2 init-hidden init-hidden-3">
