--- a/index.html
+++ b/index.html
@@ -120,12 +120,16 @@
         </div>
     </section>
     <section id="sec5"><!--INICIO SEC 5-->
+        <div class="economia-box-sec5">
+            <h2 class="init-hidden">Simule sua economia</h2>
+            <p class="init-hidden">Faça seu orçamento!</p>
+        </div>
         <div class="content-sec5">
             <div class="left-side-sec5">
                 <h3>Quanto <span>você gasta</span><br> de energia por mês?</h3>
                 <p class="normal-text-sec5">Arraste até chegar no valor da sua conta</p>
                 <div class="gasto-box-sec5">
-                    <input type="range" min="150" max="3000" step="1" class="input-range" value="100" id="input-range"><span class="gasto-sec5" id="gasto-sec5">R$ 150</span>
+                    <input type="range" min="150" max="3000" step="10" class="input-range" value="100" id="input-range"><span class="gasto-sec5" id="gasto-sec5">R$ 150</span>
                 </div>
                 <div class="result-box-sec5">
                     <p class="normal-text-sec5">você terá uma economia de:</p>
