--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
         </div>
     </section><!--FIM SEC 5-->
     <footer>
-
+        <a href="https://beacons.ai/novaya" target="_blank">Design by</a>
+        <a href="https://beacons.ai/novaya"><img src="./assets/icons/novaya-icon.png"></a>
     </footer>
+   
 </body>
 </html>
