--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </section><!--FIM SEC 5-->
     <footer>
         <a href="https://beacons.ai/novaya" target="_blank">Design by</a>
-        <a href="https://beacons.ai/novaya"><img src="./assets/icons/novaya-icon.png"></a>
+        <a href="https://beacons.ai/novaya" target="_blank"><img src="./assets/icons/novaya-icon.png"></a>
     </footer>
    
 </body>
