--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
     <section id="sec5"><!--INICIO SEC 5-->
         <div class="economia-box-sec5">
-            <h2 class="init-hidden">Simule sua economia</h2>
+            <h2>Simule sua economia</h2>
             <p class="init-hidden">Faça seu orçamento!</p>
         </div>
         <div class="content-sec5">
