--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section id="sec5"><!--INICIO SEC 5-->
         <div class="economia-box-sec5">
             <h2>Simule sua economia</h2>
-            <p class="init-hidden">Faça seu orçamento!</p>
+            <p>Faça seu orçamento!</p>
         </div>
         <div class="content-sec5">
             <div class="left-side-sec5">
