--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             Efeciência</h4>
         </div>
         <div class="right-side-sec3">
-            <span class="class-span-right-1 init-hidden">Investi<br>mento</span>
+            <span class="class-span-right-1 init-hidden"><img src="./assets/imgs/INVESTIMENTO.png"></span>
             <div class="right-side-sec3-box">
                 <span class="class-span-right-2 init-hidden">
                     <img src="./assets/icons/icon-sun.png">
@@ -116,7 +116,7 @@
                 <p>Gere sua energia sem se<br>
                 <span class="class-span-right-3">Preocupar por anos!</span></p>
             </div>
-            <span class="class-span-right-4 init-hidden">Garan<br>tido</span>
+            <span class="class-span-right-4 init-hidden"><img src="./assets/imgs/GARANTIDO.png"></span>
         </div>
     </section>
     <section id="sec5"><!--INICIO SEC 5-->
