--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
         <div class="right-side-sec3">
             <span class="class-span-right-1 init-hidden"><img src="./assets/imgs/INVESTIMENTO.png"></span>
             <div class="right-side-sec3-box">
-                <span class="class-span-right-2 init-hidden">
+                <span class="class-span-right-2">
                     <img src="./assets/icons/icon-sun.png">
                 </span>
                 <p>Gere sua energia sem se<br>
                 <span class="class-span-right-3">Preocupar por anos!</span></p>
             </div>
-            <span class="class-span-right-4 init-hidden"><img src="./assets/imgs/GARANTIDO.png"></span>
+            <span class="class-span-right-4"><img src="./assets/imgs/GARANTIDO.png"></span>
         </div>
     </section>
     <section id="sec5"><!--INICIO SEC 5-->
