--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
     </section>
     <section id="sec3">
         <div class="left-side-sec3">
-            <h3 class="init-hidden">25 Anos</h3>
-            <h4 class="init-hidden">Garantia de<br>
-            Efeciência</h4>
+            <div class="left-top-side">
+                <h3 class="init-hidden">25 Anos</h3>
+                <h4 class="init-hidden">Garantia de<br>
+                Efeciência</h4>
+            </div>
+            <div class="virtual-box-background-top"></div>
         </div>
         <div class="right-side-sec3">
             <img src="./assets/imgs/INVESTIMENTO.png" class="class-span-right-1">
@@ -116,8 +119,9 @@
                 <p>Gere sua energia sem se<br>
                 <span class="class-span-right-3">Preocupar por anos!</span></p>
             </div>
-           <img src="./assets/imgs/GARANTIDO.png" class="class-span-right-4">
+            <img src="./assets/imgs/GARANTIDO.png" class="class-span-right-4">
         </div>
+        <div class="virtual-box-background-bottom"></div>
     </section>
     <section id="sec5"><!--INICIO SEC 5-->
         <div class="economia-box-sec5">
