--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="assets/icons/logo-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js" defer></script>
-    <title>Brusuna | Energia Solar </title>
+    <title>Brusun | Energia Solar </title>
 </head>
 <body>
     <div class="instagram-button">
